--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -114,10 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/border"
-                android:orientation="vertical">
-
-            </LinearLayout>
-
+                android:orientation="vertical" />
 
         </LinearLayout>
 
