--- a/app/src/main/res/layout/fragment_details_statistics.xml
+++ b/app/src/main/res/layout/fragment_details_statistics.xml
@@ -71,7 +71,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/game_started"
                             android:textColor="#A2A2A2"
-                            android:textSize="20sp" />
+                            android:textSize="@dimen/stat_title_text_size" />
 
                         <TextView
                             android:id="@+id/tv_status_game_started"
@@ -80,7 +80,7 @@
                             android:text="@string/num_placeholder"
                             android:textAlignment="textEnd"
                             android:textColor="@color/black"
-                            android:textSize="24sp"
+                            android:textSize="@dimen/stat_value_text_size"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -100,7 +100,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/game_own"
                             android:textColor="#A2A2A2"
-                            android:textSize="20sp" />
+                            android:textSize="@dimen/stat_title_text_size" />
 
                         <TextView
                             android:id="@+id/tv_status_game_own"
@@ -109,7 +109,7 @@
                             android:text="@string/num_placeholder"
                             android:textAlignment="textEnd"
                             android:textColor="@color/black"
-                            android:textSize="24sp"
+                            android:textSize="@dimen/stat_value_text_size"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -129,7 +129,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/win_rate"
                             android:textColor="#A2A2A2"
-                            android:textSize="20sp" />
+                            android:textSize="@dimen/stat_title_text_size" />
 
                         <TextView
                             android:id="@+id/tv_status_win_rate"
@@ -138,7 +138,7 @@
                             android:text="@string/percent_placeholder"
                             android:textAlignment="textEnd"
                             android:textColor="@color/black"
-                            android:textSize="24sp"
+                            android:textSize="@dimen/stat_value_text_size"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -158,7 +158,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/win_with_no_mistake"
                             android:textColor="#A2A2A2"
-                            android:textSize="20sp" />
+                            android:textSize="@dimen/stat_title_text_size" />
 
                         <TextView
                             android:id="@+id/tv_status_win_with_no_mistake"
@@ -167,7 +167,7 @@
                             android:text="@string/num_placeholder"
                             android:textAlignment="textEnd"
                             android:textColor="@color/black"
-                            android:textSize="24sp"
+                            android:textSize="@dimen/stat_value_text_size"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
@@ -224,7 +224,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/best_time"
                             android:textColor="#A2A2A2"
-                            android:textSize="20sp" />
+                            android:textSize="@dimen/stat_title_text_size" />
 
                         <TextView
                             android:id="@+id/tv_status_best_time"
@@ -233,7 +233,7 @@
                             android:text="@string/time_placeholder"
                             android:textAlignment="textEnd"
                             android:textColor="@color/black"
-                            android:textSize="24sp"
+                            android:textSize="@dimen/stat_value_text_size"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -253,7 +253,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/average_time"
                             android:textColor="#A2A2A2"
-                            android:textSize="20sp" />
+                            android:textSize="@dimen/stat_title_text_size" />
 
                         <TextView
                             android:id="@+id/tv_status_average_time"
@@ -262,7 +262,7 @@
                             android:text="@string/time_placeholder"
                             android:textAlignment="textEnd"
                             android:textColor="@color/black"
-                            android:textSize="24sp"
+                            android:textSize="@dimen/stat_value_text_size"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
@@ -319,7 +319,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/current_win_streak"
                             android:textColor="#A2A2A2"
-                            android:textSize="20sp" />
+                            android:textSize="@dimen/stat_title_text_size" />
 
                         <TextView
                             android:id="@+id/tv_status_current_win_streak"
@@ -328,7 +328,7 @@
                             android:text="@string/num_placeholder"
                             android:textAlignment="textEnd"
                             android:textColor="@color/black"
-                            android:textSize="24sp"
+                            android:textSize="@dimen/stat_value_text_size"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -348,7 +348,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/longest_win_streak"
                             android:textColor="#A2A2A2"
-                            android:textSize="20sp" />
+                            android:textSize="@dimen/stat_title_text_size" />
 
                         <TextView
                             android:id="@+id/tv_status_longest_win_streak"
@@ -357,7 +357,7 @@
                             android:text="@string/num_placeholder"
                             android:textAlignment="textEnd"
                             android:textColor="@color/black"
-                            android:textSize="24sp"
+                            android:textSize="@dimen/stat_value_text_size"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
