--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -60,14 +60,31 @@
                 android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tv_game_difficulty"
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/medium"
-                    android:textColor="#A2A2A2"
-                    android:textSize="15sp" />
+                    android:gravity="center_vertical"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/tv_game_difficulty"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/medium"
+                        android:textColor="#A2A2A2"
+                        android:textSize="15sp" />
+                    <ImageView
+                        android:id="@+id/iv_edit_enabled"
+                        android:visibility="gone"
+                        android:background="@drawable/btn_bg_solid"
+                        android:layout_width="17dp"
+                        android:layout_height="17dp"
+                        android:layout_marginStart="5dp"
+                        android:contentDescription="@string/enable_edit"
+                        android:src="@drawable/ic_note"
+                        app:tint="@color/white"
+                        android:padding="5dp"/>
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/tv_game_mistakes"
@@ -142,47 +159,71 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="20dp"
+                        android:layout_height="@dimen/game_board_icon_size"
                         android:layout_marginBottom="7dp"
                         android:contentDescription="@string/erase"
                         android:src="@drawable/eraser"
-                        app:tint="#A2A2A2" />
+                        app:tint="@color/game_board_icon_tint" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/erase"
                         android:textAlignment="center"
-                        android:textColor="#A2A2A2"
+                        android:textColor="@color/game_board_icon_tint"
                         android:textSize="15sp" />
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/ll_note"
+                <FrameLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:paddingVertical="5dp">
+                    android:layout_weight="1">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:layout_marginBottom="7dp"
-                        android:contentDescription="@string/note"
-                        android:src="@drawable/clipboard"
-                        app:tint="#A2A2A2" />
-
-                    <TextView
+                    <LinearLayout
+                        android:id="@+id/ll_note"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/note"
-                        android:textAlignment="center"
-                        android:textColor="#A2A2A2"
-                        android:textSize="15sp" />
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:paddingVertical="5dp">
 
-                </LinearLayout>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/game_board_icon_size"
+                            android:layout_marginBottom="7dp"
+                            android:contentDescription="@string/note"
+                            android:src="@drawable/ic_note"
+                            app:tint="@color/game_board_icon_tint" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/note"
+                            android:textAlignment="center"
+                            android:textColor="@color/game_board_icon_tint"
+                            android:textSize="15sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/ll_notes_status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginStart="20dp"
+                        android:background="@drawable/btn_bg_deactivate">
+
+                        <TextView
+                            android:id="@+id/tv_notes_status"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingHorizontal="7dp"
+                            android:paddingVertical="2.5dp"
+                            android:text="@string/off"
+                            android:textColor="@color/white"
+                            android:textSize="11sp" />
+                    </LinearLayout>
+                </FrameLayout>
 
                 <LinearLayout
                     android:id="@+id/ll_hint"
@@ -194,18 +235,18 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="20dp"
+                        android:layout_height="@dimen/game_board_icon_size"
                         android:layout_marginBottom="7dp"
                         android:contentDescription="@string/hint"
                         android:src="@drawable/lightbulb"
-                        app:tint="#A2A2A2" />
+                        app:tint="@color/game_board_icon_tint" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/hint"
                         android:textAlignment="center"
-                        android:textColor="#A2A2A2"
+                        android:textColor="@color/game_board_icon_tint"
                         android:textSize="15sp" />
 
                 </LinearLayout>
