--- a/app/src/main/res/layout/gameover_popup_window.xml
+++ b/app/src/main/res/layout/gameover_popup_window.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:paddingHorizontal="50dp">
+    android:paddingHorizontal="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginEnd="15dp"
-                android:src="@drawable/ic_restart"
+                android:src="@drawable/ic_restart_bottom"
                 app:tint="@color/white" />
 
             <TextView
