--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.Sudoku" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <item name="fontFamily">@font/poppins_font_family</item>
+        <item name="fontFamily">@font/barlow_font_family</item>
         <item name="colorPrimary">@color/colorPrimary</item>
     </style>
 
