--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.Sudoku" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="fontFamily">@font/barlow_font_family</item>
         <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="materialSwitchStyle">@style/MaterialSwitch</item>
+        <item name="android:soundEffectsEnabled">false</item>
     </style>
 
     <style name="Theme.Sudoku" parent="Base.Theme.Sudoku" />
