--- a/app/src/main/res/layout/gameover_popup_window.xml
+++ b/app/src/main/res/layout/gameover_popup_window.xml
@@ -25,6 +25,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tv_game_over_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
