--- a/app/src/main/res/layout/pause_popup_window.xml
+++ b/app/src/main/res/layout/pause_popup_window.xml
@@ -113,29 +113,32 @@
             android:paddingVertical="20dp">
 
             <ImageView
+                android:id="@+id/iv_pause_popup_icon"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:background="@drawable/tip_icon_bg"
                 android:contentDescription="@string/undo"
-                android:src="@drawable/ic_undo"
+                android:src="@drawable/ic_bulb"
                 app:tint="@color/colorPrimary" />
 
             <TextView
+                android:id="@+id/tv_pause_popup_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="@string/undo"
+                android:text="@string/hint"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/tv_pause_popup_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:textColor="#888888"
                 android:layout_marginTop="10dp"
-                android:text="@string/go_back_and_make_changes" />
+                android:text="@string/use_hints_when_you_get_stuck" />
         </LinearLayout>
 
         <LinearLayout
