--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -146,6 +146,56 @@
                     android:background="@color/settings_text" />
 
                 <LinearLayout
+                    android:id="@+id/ll_settings_strategies"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingVertical="15dp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="@dimen/settings_icon_size"
+                            android:layout_height="@dimen/settings_icon_size"
+                            android:contentDescription="@string/strategies"
+                            android:padding="2dp"
+                            android:src="@drawable/ic_strategies"
+                            app:tint="@color/settings_text" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:text="@string/strategies"
+                            android:textColor="@color/settings_text"
+                            android:textSize="@dimen/settings_text_size"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="end">
+
+                        <ImageView
+                            android:layout_width="@dimen/settings_icon_size"
+                            android:layout_height="@dimen/settings_icon_size"
+                            android:contentDescription="@string/enter_into_the_option"
+                            android:src="@drawable/ic_right_angle" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="@color/settings_text" />
+
+                <LinearLayout
                     android:id="@+id/ll_settings_history"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
