add: share option

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/fl_fragment_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/home_background"
@@ -10,17 +10,18 @@
     tools:context=".fragments.MainFragment">
 
     <LinearLayout
-        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="20dp"
-        android:orientation="horizontal">
+        android:layout_marginTop="50dp"
+        android:orientation="horizontal"
+        android:paddingHorizontal="20dp">
+
         <ImageView
             android:id="@+id/iv_home_settings"
-            android:padding="5dp"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:contentDescription="@string/settings"
+            android:padding="5dp"
             android:src="@drawable/ic_settings"
             app:tint="#444444" />
     </LinearLayout>
