--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/ll_splash_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -9,11 +10,14 @@
     android:orientation="vertical"
     tools:context=".activities.SplashScreenActivity">
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:contentDescription="@string/sudoku"
-        android:src="@drawable/app_icon" />
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lv_splash_screen"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:alpha="1"
+        app:lottie_autoPlay="true"
+        app:lottie_cacheComposition="true"
+        app:lottie_speed="0.4" />
 
     <TextView
         android:layout_width="match_parent"
@@ -23,7 +27,8 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="invisible" />
 
     <TextView
         android:layout_width="match_parent"
@@ -32,7 +37,8 @@
         android:text="@string/by"
         android:textAlignment="center"
         android:textColor="@color/gray"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        android:visibility="invisible" />
 
     <TextView
         android:layout_width="match_parent"
@@ -41,6 +47,7 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="25sp"
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        android:visibility="invisible" />
 
 </LinearLayout>
