--- a/app/src/main/res/layout/activity_game_complete.xml
+++ b/app/src/main/res/layout/activity_game_complete.xml
@@ -152,7 +152,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/timer"
+                            android:text="@string/time"
                             android:textColor="#EEEEEE"
                             android:textSize="16sp"
                             android:textStyle="bold" />
@@ -169,6 +169,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/ll_best_time"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
